perf(api): per-head fee oracle snapshot + result cache for eth_feeHistory (#10524)
* perf(api): per-head fee oracle snapshot + result cache for eth_feeHistory

Replaces the per-request 100-block scan in eth_gasPrice / eth_maxPriorityFeePerGas
with a per-head FeeOracleSnapshot computed off the block-import thread (when an
EthScheduler is available) and cached by chain-head hash. A cold path on the request
side self-heals: the first caller after a head change computes inline and seeds the
snapshot for subsequent callers. Bounds (miner_setMinGasPrice /
miner_setMinPriorityFee) are still applied at read time against the live mining
config, so configuration changes take effect immediately and never get baked into
a stale snapshot.

eth_feeHistory gains a result cache for "latest" requests, keyed on
(headHash, blockCount, sortedPercentiles, RewardBounds snapshot, nextBlockHardforkId).
Historic-block queries bypass the cache. The pre-existing per-block reward cache now
stores unbounded rewards; request-specific bounding is applied per-call with a
mining-config snapshot taken at request entry. Other targeted wins:

- getBlobBaseFees reuses the previous header instead of issuing one parent-hash
  RocksDB read per block (saves up to 255 reads per feeHistory-256 request).
- getNextBaseFee / getNextBlobFee skip the chainHead+1 storage lookup when the
  block can't exist (the "latest" case).
- getBlockHeaders uses the bulk Blockchain.getBlockHeaders(start, count) API, which
  walks parent hashes from the in-memory header cache.
- Rewards loop is sequential again (fork-join split overhead dominated cache-hit
  cases for big ranges).
- TransactionInfo no longer carries the Transaction reference.

DefaultBlockchain.getBlockBody / getTxReceipts now populate the in-memory cache on
read miss (matching the existing getBlockHeader(Hash) pattern). Refactors the three
populate-on-miss accessors into a single getCached<T> helper. Without this fix the
--cache-last-blocks cache only ever hel