@@ -14,8 +14,10 @@
  */
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods;
 
+import static com.google.common.base.Preconditions.checkState;
 import static org.hyperledger.besu.ethereum.mainnet.feemarket.ExcessBlobGasCalculator.calculateExcessBlobGasForParent;
 
+import org.hyperledger.besu.datatypes.HardforkId;
 import org.hyperledger.besu.datatypes.Hash;
 import org.hyperledger.besu.datatypes.Wei;
 import org.hyperledger.besu.datatypes.parameters.UnsignedIntParameter;
@@ -42,21 +44,16 @@ import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 import org.hyperledger.besu.ethereum.mainnet.ProtocolSpec;
 import org.hyperledger.besu.ethereum.mainnet.feemarket.BaseFeeMarket;
 import org.hyperledger.besu.ethereum.mainnet.feemarket.FeeMarket;
+import org.hyperledger.besu.util.cache.MemoryBoundCache;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.LongStream;
 import java.util.stream.Stream;
 
-import com.github.benmanes.caffeine.cache.Cache;
-import com.github.benmanes.caffeine.cache.Caffeine;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.Streams;
 import org.apache.tuweni.units.bigints.UInt256s;
 
 public class EthFeeHistory implements JsonRpcMethod {
@@ -65,11 +62,46 @@ public class EthFeeHistory implements JsonRpcMethod {
   private final Blockchain blockchain;
   private final MiningCoordinator miningCoordinator;
   private final ApiConfiguration apiConfiguration;
-  private final Cache<RewardCacheKey, List<Wei>> cache;
-  private static final int MAXIMUM_CACHE_SIZE = 100_000;
+  private final MemoryBoundCache<RewardCacheKey, List<Wei>> perBlockRewardsCache;
+  // Full results for "latest" requests; historical queries are not cached.
+  private final MemoryBoundCache<ResultCacheKey, FeeHistory.FeeHistoryResult> resultCache;
+  // Entry size varies with percentile count and block range, so both caches are byte-bounded.
+  private static final long PER_BLOCK_REWARDS_CACHE_MAX_BYTES = 32L * 1024 * 1024;
+  private static final long RESULT_CACHE_MAX_BYTES = 16L * 1024 * 1024;
   private static final int MAXIMUM_QUERY_PERCENTILES = 100;
 
   record RewardCacheKey(Hash blockHash, List<Double> rewardPercentiles) {}
+
+  // Per-request mining-config snapshot; part of the cache key so a mid-flight
+  // miner_setMinGasPrice / miner_setMinPriorityFee can't leak a stale bounded result.
+  record RewardBounds(Wei lowerBoundGasPrice, Wei minPriorityFee) {}
+
+  record ResultCacheKey(
+      Hash chainHeadHash,
+      int blockCount,
+      Optional<List<Double>> sortedRewardPercentiles,
+      Optional<RewardBounds> rewardBounds,
+      HardforkId nextBlockHardforkId) {}
+
+  private static int perBlockRewardsEntryWeight(final RewardCacheKey key, final List<Wei> rewards) {
+    return 128 + 32 * key.rewardPercentiles().size() + 80 * rewards.size();
+  }
+
+  private static int resultEntryWeight(
+      final ResultCacheKey key, final FeeHistory.FeeHistoryResult result) {
+    int weight =
+        256
+            + 32 * key.sortedRewardPercentiles().map(List::size).orElse(0)
+            + 32 * (result.getGasUsedRatio().size() + result.getBlobGasUsedRatio().size())
+            + 64 * (result.getBaseFeePerGas().size() + result.getBaseFeePerBlobGas().size());
+    final List<List<String>> reward = result.getReward();
+    if (reward != null) {
+      for (final List<String> blockRewards : reward) {
+        weight += 64 + 64 * blockRewards.size();
+      }
+    }
+    return weight;
+  }
 
   public EthFeeHistory(
       final ProtocolSchedule protocolSchedule,
@@ -81,7 +113,11 @@ public class EthFeeHistory implements JsonRpcMethod {
     this.miningCoordinator = miningCoordinator;
     this.apiConfiguration = apiConfiguration;
     this.blockchain = blockchainQueries.getBlockchain();
-    this.cache = Caffeine.newBuilder().maximumSize(MAXIMUM_CACHE_SIZE).build();
+    this.perBlockRewardsCache =
+        new MemoryBoundCache<>(
+            PER_BLOCK_REWARDS_CACHE_MAX_BYTES, EthFeeHistory::perBlockRewardsEntryWeight);
+    this.resultCache =
+        new MemoryBoundCache<>(RESULT_CACHE_MAX_BYTES, EthFeeHistory::resultEntryWeight);
   }
 
   @Override
@@ -128,23 +164,54 @@ public class EthFeeHistory implements JsonRpcMethod {
       return new JsonRpcErrorResponse(requestId, RpcErrorType.INVALID_BLOCK_NUMBER_PARAMS);
     }
 
+    final boolean isLatestRequest = highestBlockNumber == chainHeadBlockNumber;
+    final Optional<RewardBounds> rewardBounds =
+        maybeRewardPercentiles.isPresent() && apiConfiguration.isGasAndPriorityFeeLimitingEnabled()
+            ? Optional.of(
+                new RewardBounds(
+                    blockchainQueries.gasPriceLowerBound(),
+                    miningCoordinator.getMinPriorityFeePerGas()))
+            : Optional.empty();
+    final ProtocolSpec nextBlockProtocolSpec =
+        protocolSchedule.getForNextBlockHeader(chainHeadHeader, chainHeadHeader.getTimestamp());
+    final Optional<List<Double>> sortedRewardPercentiles =
+        maybeRewardPercentiles
+            .filter(list -> list.size() <= MAXIMUM_QUERY_PERCENTILES)
+            .map(percentiles -> percentiles.stream().sorted().toList());
+    final ResultCacheKey resultCacheKey =
+        isLatestRequest
+            ? new ResultCacheKey(
+                chainHeadHeader.getBlockHash(),
+                blockCount,
+                sortedRewardPercentiles,
+                rewardBounds,
+                nextBlockProtocolSpec.getHardforkId())
+            : null;
+
+    if (resultCacheKey != null) {
+      final FeeHistory.FeeHistoryResult cached = resultCache.getIfPresent(resultCacheKey);
+      if (cached != null) {
+        return new JsonRpcSuccessResponse(requestId, cached);
+      }
+    }
+
     final long firstBlock = Math.max(0, highestBlockNumber - (blockCount - 1));
     final long lastBlock =
         blockCount > highestBlockNumber ? (highestBlockNumber + 1) : (firstBlock + blockCount);
 
     final List<BlockHeader> blockHeaderRange = getBlockHeaders(firstBlock, lastBlock);
     final List<Wei> requestedBaseFees = getBaseFees(blockHeaderRange);
-    final List<Wei> requestedBlobBaseFees = getBlobBaseFees(blockHeaderRange);
+    final List<Wei> requestedBlobBaseFees =
+        getBlobBaseFees(blockHeaderRange, nextBlockProtocolSpec);
     final Wei nextBaseFee =
         getNextBaseFee(highestBlockNumber, chainHeadHeader, requestedBaseFees, blockHeaderRange);
     final List<Double> gasUsedRatios = getGasUsedRatios(blockHeaderRange);
     final List<Double> blobGasUsedRatios = getBlobGasUsedRatios(blockHeaderRange);
     final Optional<List<List<Wei>>> maybeRewards =
-        maybeRewardPercentiles
-            .filter(list -> list.size() <= MAXIMUM_QUERY_PERCENTILES)
-            .map(percentiles -> getRewards(percentiles, blockHeaderRange, nextBaseFee));
-    return new JsonRpcSuccessResponse(
-        requestId,
+        sortedRewardPercentiles.map(
+            percentiles ->
+                computeRewardsForRange(percentiles, blockHeaderRange, nextBaseFee, rewardBounds));
+    final FeeHistory.FeeHistoryResult result =
         createFeeHistoryResult(
             firstBlock,
             requestedBaseFees,
@@ -152,7 +219,32 @@ public class EthFeeHistory implements JsonRpcMethod {
             nextBaseFee,
             gasUsedRatios,
             blobGasUsedRatios,
-            maybeRewards));
+            maybeRewards);
+    if (resultCacheKey != null) {
+      resultCache.put(resultCacheKey, result);
+    }
+    return new JsonRpcSuccessResponse(requestId, result);
+  }
+
+  private List<List<Wei>> computeRewardsForRange(
+      final List<Double> sortedPercentiles,
+      final List<BlockHeader> blockHeaders,
+      final Wei nextBaseFee,
+      final Optional<RewardBounds> rewardBounds) {
+    final List<List<Wei>> rewards = new ArrayList<>(blockHeaders.size());
+    if (rewardBounds.isEmpty()) {
+      for (final BlockHeader header : blockHeaders) {
+        calculateBlockHeaderReward(sortedPercentiles, header).ifPresent(rewards::add);
+      }
+      return rewards;
+    }
+    final RewardBounds bounds = rewardBounds.get();
+    for (final BlockHeader header : blockHeaders) {
+      calculateBlockHeaderReward(sortedPercentiles, header)
+          .map(blockRewards -> boundRewardsWithSnapshot(blockRewards, nextBaseFee, bounds))
+          .ifPresent(rewards::add);
+    }
+    return rewards;
   }
 
   private Wei getNextBaseFee(
@@ -161,6 +253,12 @@ public class EthFeeHistory implements JsonRpcMethod {
       final List<Wei> explicitlyRequestedBaseFees,
       final List<BlockHeader> blockHeaders) {
     final long nextBlockNumber = resolvedHighestBlockNumber + 1;
+    // For "latest" (the common case) nextBlockNumber > chainHead, so the block doesn't exist yet:
+    // compute directly and skip the storage read. Only historical-block queries need the lookup.
+    if (nextBlockNumber > chainHeadHeader.getNumber()) {
+      return computeNextBaseFee(
+          nextBlockNumber, chainHeadHeader, explicitlyRequestedBaseFees, blockHeaders);
+    }
     return blockchain
         .getBlockHeader(nextBlockNumber)
         .map(blockHeader -> blockHeader.getBaseFee().orElse(Wei.ZERO))
@@ -208,111 +306,107 @@ public class EthFeeHistory implements JsonRpcMethod {
         .orElse(Wei.ZERO); // If the fee market does not implement base fee, return zero
   }
 
-  private List<List<Wei>> getRewards(
-      final List<Double> rewardPercentiles,
-      final List<BlockHeader> blockHeaders,
-      final Wei nextBaseFee) {
-    var sortedPercentiles = rewardPercentiles.stream().sorted().toList();
-    return blockHeaders.stream()
-        .parallel()
-        .map(blockHeader -> calculateBlockHeaderReward(sortedPercentiles, blockHeader, nextBaseFee))
-        .flatMap(Optional::stream)
-        .toList();
-  }
-
   private Optional<List<Wei>> calculateBlockHeaderReward(
-      final List<Double> sortedPercentiles, final BlockHeader blockHeader, final Wei nextBaseFee) {
+      final List<Double> sortedPercentiles, final BlockHeader blockHeader) {
 
-    // Create a new key for the reward cache
+    // Cache only unbounded rewards (a pure function of immutable block state); the caller applies
+    // request-specific bounds via boundRewardsWithSnapshot, so miner-config changes need no
+    // invalidation.
     final RewardCacheKey key = new RewardCacheKey(blockHeader.getBlockHash(), sortedPercentiles);
 
-    // Try to get the rewards from the cache
-    return Optional.ofNullable(cache.getIfPresent(key))
+    return Optional.ofNullable(perBlockRewardsCache.getIfPresent(key))
         .or(
             () -> {
-              // If the rewards are not in the cache, compute them
-              Optional<Block> block = blockchain.getBlockByHash(blockHeader.getBlockHash());
+              final Optional<Block> block = blockchain.getBlockByHash(blockHeader.getBlockHash());
               return block.map(
                   b -> {
-                    List<Wei> rewards = computeRewards(sortedPercentiles, b, nextBaseFee);
-                    // Put the computed rewards in the cache for future use
-                    cache.put(key, rewards);
+                    final List<Wei> rewards = computeUnboundedRewards(sortedPercentiles, b);
+                    perBlockRewardsCache.put(key, rewards);
                     return rewards;
                   });
             });
   }
 
-  record TransactionInfo(Transaction transaction, Long gasUsed, Wei effectivePriorityFeePerGas) {}
+  record TransactionInfo(long gasUsed, Wei effectivePriorityFeePerGas) {}
 
   @VisibleForTesting
   public List<Wei> computeRewards(
       final List<Double> rewardPercentiles, final Block block, final Wei nextBaseFee) {
+    final List<Wei> realRewards = computeUnboundedRewards(rewardPercentiles, block);
+    if (apiConfiguration.isGasAndPriorityFeeLimitingEnabled()) {
+      return boundRewardsWithSnapshot(
+          realRewards,
+          nextBaseFee,
+          new RewardBounds(
+              blockchainQueries.gasPriceLowerBound(), miningCoordinator.getMinPriorityFeePerGas()));
+    }
+    return realRewards;
+  }
+
+  private List<Wei> computeUnboundedRewards(
+      final List<Double> rewardPercentiles, final Block block) {
     final List<Transaction> transactions = block.getBody().getTransactions();
     if (transactions.isEmpty()) {
-      // all 0's for empty block
-      return generateZeroWeiList(rewardPercentiles.size());
+      return Collections.nCopies(rewardPercentiles.size(), Wei.ZERO);
     }
     final Optional<Wei> baseFee = block.getHeader().getBaseFee();
-    final List<Long> transactionsGasUsed = calculateTransactionsGasUsed(block);
-    final List<TransactionInfo> transactionsInfo =
+    final long[] transactionsGasUsed = calculateTransactionsGasUsed(block);
+    // Receipt count = transaction count is guaranteed by the header's receipts root; a mismatch
+    // means corrupted local storage, so fail loudly rather than truncate to the shorter list.
+    checkState(
+        transactionsGasUsed.length == transactions.size(),
+        "Block %s has %s transactions but %s receipts: receipts/body storage mismatch",
+        block.getHash(),
+        transactions.size(),
+        transactionsGasUsed.length);
+    final TransactionInfo[] transactionsInfo =
         generateTransactionsInfo(transactions, transactionsGasUsed, baseFee);
-
-    var realRewards = calculateRewards(rewardPercentiles, block, transactionsInfo);
-
-    // If the priority fee boundary is set, return the bounded rewards. Otherwise, return the real
-    // rewards.
-    if (apiConfiguration.isGasAndPriorityFeeLimitingEnabled()) {
-      return boundRewards(realRewards, nextBaseFee);
-    } else {
-      return realRewards;
-    }
+    return calculateRewards(rewardPercentiles, block, transactionsInfo);
   }
 
   private List<Wei> calculateRewards(
       final List<Double> rewardPercentiles,
       final Block block,
-      final List<TransactionInfo> sortedTransactionsInfo) {
+      final TransactionInfo[] sortedTransactionsInfo) {
     final ArrayList<Wei> rewards = new ArrayList<>(rewardPercentiles.size());
 
     // Start with the gas used by the first transaction
-    double cumulativeGasUsed = sortedTransactionsInfo.get(0).gasUsed();
-    var transactionIndex = 0;
+    double cumulativeGasUsed = sortedTransactionsInfo[0].gasUsed();
+    int transactionIndex = 0;
+    final long blockGasUsed = block.getHeader().getGasUsed();
     // Iterate over each reward percentile
     for (double rewardPercentile : rewardPercentiles) {
       // Calculate the threshold gas used for the current reward percentile
       // This is the amount of gas that needs to be used to reach this percentile
-      var thresholdGasUsed = rewardPercentile * block.getHeader().getGasUsed() / 100;
+      final double thresholdGasUsed = rewardPercentile * blockGasUsed / 100;
 
       // Update cumulativeGasUsed by adding the gas used by each transaction
       // Stop when cumulativeGasUsed reaches the threshold or there are no more transactions
       while (cumulativeGasUsed < thresholdGasUsed
-          && transactionIndex < sortedTransactionsInfo.size() - 1) {
+          && transactionIndex < sortedTransactionsInfo.length - 1) {
         transactionIndex++;
-        cumulativeGasUsed += sortedTransactionsInfo.get(transactionIndex).gasUsed();
+        cumulativeGasUsed += sortedTransactionsInfo[transactionIndex].gasUsed();
       }
       // Add the effective priority fee per gas of the transaction that reached the percentile to
       // the rewards list
-      rewards.add(sortedTransactionsInfo.get(transactionIndex).effectivePriorityFeePerGas);
+      rewards.add(sortedTransactionsInfo[transactionIndex].effectivePriorityFeePerGas);
     }
     return rewards;
   }
 
   /**
-   * This method returns a list of bounded rewards.
-   *
-   * @param rewards The list of rewards to be bounded.
-   * @param nextBaseFee The base fee of the next block.
-   * @return The list of bounded rewards.
+   * Bound each reward to a min/max derived from the supplied mining-config snapshot. The snapshot
+   * is taken once per request and threaded through here so the cache key carries the exact values
+   * used in computation (avoids a torn read when miner_setMinGasPrice / miner_setMinPriorityFee
+   * lands mid-request).
    */
-  private List<Wei> boundRewards(final List<Wei> rewards, final Wei nextBaseFee) {
-    final Wei lowerBoundGasPrice = blockchainQueries.gasPriceLowerBound();
-    // prevent unsigned underflow when nextBaseFee exceeds lower bound
+  private List<Wei> boundRewardsWithSnapshot(
+      final List<Wei> rewards, final Wei nextBaseFee, final RewardBounds bounds) {
     final Wei lowerBoundPriorityFee =
-        lowerBoundGasPrice.greaterThan(nextBaseFee)
-            ? lowerBoundGasPrice.subtract(nextBaseFee)
+        bounds.lowerBoundGasPrice().greaterThan(nextBaseFee)
+            ? bounds.lowerBoundGasPrice().subtract(nextBaseFee)
             : Wei.ZERO;
-    final Wei minPriorityFee = miningCoordinator.getMinPriorityFeePerGas();
-    final Wei forcedMinPriorityFee = UInt256s.max(minPriorityFee, lowerBoundPriorityFee);
+    final Wei forcedMinPriorityFee = UInt256s.max(bounds.minPriorityFee(), lowerBoundPriorityFee);
     final Wei lowerBound =
         forcedMinPriorityFee
             .multiply(apiConfiguration.getLowerBoundGasAndPriorityFeeCoefficient())
@@ -322,7 +416,11 @@ public class EthFeeHistory implements JsonRpcMethod {
             .multiply(apiConfiguration.getUpperBoundGasAndPriorityFeeCoefficient())
             .divide(100);
 
-    return rewards.stream().map(reward -> boundReward(reward, lowerBound, upperBound)).toList();
+    final List<Wei> bounded = new ArrayList<>(rewards.size());
+    for (final Wei reward : rewards) {
+      bounded.add(boundReward(reward, lowerBound, upperBound));
+    }
+    return bounded;
   }
 
   /**
@@ -339,29 +437,34 @@ public class EthFeeHistory implements JsonRpcMethod {
         : reward.compareTo(upperBound) >= 0 ? upperBound : reward;
   }
 
-  private List<Long> calculateTransactionsGasUsed(final Block block) {
-    final List<Long> transactionsGasUsed = new ArrayList<>();
+  private long[] calculateTransactionsGasUsed(final Block block) {
+    final List<TransactionReceipt> receipts = blockchain.getTxReceipts(block.getHash()).get();
+    final long[] gasUsed = new long[receipts.size()];
     long cumulativeGasUsed = 0L;
-    for (final TransactionReceipt transactionReceipt :
-        blockchain.getTxReceipts(block.getHash()).get()) {
-      transactionsGasUsed.add(transactionReceipt.getCumulativeGasUsed() - cumulativeGasUsed);
-      cumulativeGasUsed = transactionReceipt.getCumulativeGasUsed();
+    for (int i = 0; i < receipts.size(); i++) {
+      final long cum = receipts.get(i).getCumulativeGasUsed();
+      gasUsed[i] = cum - cumulativeGasUsed;
+      cumulativeGasUsed = cum;
     }
-    return transactionsGasUsed;
+    return gasUsed;
   }
 
-  private List<TransactionInfo> generateTransactionsInfo(
+  private TransactionInfo[] generateTransactionsInfo(
       final List<Transaction> transactions,
-      final List<Long> transactionsGasUsed,
+      final long[] transactionsGasUsed,
       final Optional<Wei> baseFee) {
-    return Streams.zip(
-            transactions.stream(),
-            transactionsGasUsed.stream(),
-            (transaction, gasUsed) ->
-                new TransactionInfo(
-                    transaction, gasUsed, transaction.getEffectivePriorityFeePerGas(baseFee)))
-        .sorted(Comparator.comparing(TransactionInfo::effectivePriorityFeePerGas))
-        .toList();
+    // Direct array + comparator instead of Streams.zip + Comparator.comparing: avoids
+    // stream-pipeline boxing on the hot path for large reward-percentile ranges.
+    final int n = transactions.size();
+    final TransactionInfo[] info = new TransactionInfo[n];
+    for (int i = 0; i < n; i++) {
+      final Transaction tx = transactions.get(i);
+      info[i] =
+          new TransactionInfo(transactionsGasUsed[i], tx.getEffectivePriorityFeePerGas(baseFee));
+    }
+    Arrays.sort(
+        info, (a, b) -> a.effectivePriorityFeePerGas().compareTo(b.effectivePriorityFeePerGas()));
+    return info;
   }
 
   private boolean isInvalidBlockCount(final int blockCount) {
@@ -369,11 +472,11 @@ public class EthFeeHistory implements JsonRpcMethod {
   }
 
   private List<BlockHeader> getBlockHeaders(final long oldestBlock, final long lastBlock) {
-    return LongStream.range(oldestBlock, lastBlock)
-        .parallel()
-        .mapToObj(blockchain::getBlockHeader)
-        .flatMap(Optional::stream)
-        .toList();
+    final int count = (int) (lastBlock - oldestBlock);
+    if (count <= 0) {
+      return List.of();
+    }
+    return blockchain.getBlockHeaders(oldestBlock, count);
   }
 
   private List<Wei> getBaseFees(final List<BlockHeader> blockHeaders) {
@@ -382,44 +485,56 @@ public class EthFeeHistory implements JsonRpcMethod {
         .toList();
   }
 
-  private List<Wei> getBlobBaseFees(final List<BlockHeader> blockHeaders) {
+  private List<Wei> getBlobBaseFees(
+      final List<BlockHeader> blockHeaders, final ProtocolSpec nextBlockProtocolSpec) {
     if (blockHeaders.isEmpty()) {
       return Collections.emptyList();
     }
-    // Calculate the BlobFee for the requested range
-    List<Wei> baseFeesPerBlobGas =
-        blockHeaders.stream().map(this::getBlobGasFee).collect(Collectors.toList());
+    // Headers are sorted oldest→newest, so blockHeaders[i] is the parent of blockHeaders[i+1].
+    // Reuse it instead of a per-block parent-hash storage read; only the first header needs a
+    // real parent lookup.
+    final Wei[] baseFeesPerBlobGas = new Wei[blockHeaders.size() + 1];
+    BlockHeader previous = null;
+    int i = 0;
+    for (; i < blockHeaders.size(); i++) {
+      final BlockHeader header = blockHeaders.get(i);
+      final BlockHeader parent;
+      if (previous != null && header.getParentHash().equals(previous.getHash())) {
+        parent = previous;
+      } else {
+        parent = blockchain.getBlockHeader(header.getParentHash()).orElse(null);
+      }
+      if (parent == null) {
+        baseFeesPerBlobGas[i] = Wei.ZERO;
+      } else {
+        baseFeesPerBlobGas[i] = getBlobGasFee(protocolSchedule.getByBlockHeader(header), parent);
+      }
+      previous = header;
+    }
 
-    // Calculate the next blob base fee and add it to the list
-    Wei nextBlobBaseFee = getNextBlobFee(blockHeaders.get(blockHeaders.size() - 1));
-    baseFeesPerBlobGas.add(nextBlobBaseFee);
-
-    return baseFeesPerBlobGas;
-  }
-
-  private Wei getBlobGasFee(final BlockHeader header) {
-    return blockchain
-        .getBlockHeader(header.getParentHash())
-        .map(parent -> getBlobGasFee(protocolSchedule.getByBlockHeader(header), parent))
-        .orElse(Wei.ZERO);
+    baseFeesPerBlobGas[i] = getNextBlobFee(blockHeaders.getLast(), nextBlockProtocolSpec);
+    return Arrays.asList(baseFeesPerBlobGas);
   }
 
   private Wei getBlobGasFee(final ProtocolSpec spec, final BlockHeader parent) {
     return spec.getFeeMarket().blobGasPricePerGas(calculateExcessBlobGasForParent(spec, parent));
   }
 
-  private Wei getNextBlobFee(final BlockHeader header) {
+  private Wei getNextBlobFee(final BlockHeader header, final ProtocolSpec nextBlockProtocolSpec) {
     // Attempt to retrieve the next header based on the current header's number.
-    long nextBlockNumber = header.getNumber() + 1;
+    final long nextBlockNumber = header.getNumber() + 1;
+    // Skip the storage lookup if we already know the next block doesn't exist — true for
+    // every "latest" request, which is the dominant case for feeHistory.
+    if (nextBlockNumber > blockchain.getChainHeadBlockNumber()) {
+      return getBlobGasFee(nextBlockProtocolSpec, header);
+    }
     return blockchain
         .getBlockHeader(nextBlockNumber)
         .map(nextHeader -> getBlobGasFee(protocolSchedule.getByBlockHeader(nextHeader), header))
-        // If the next header is not present, calculate the fee using the current time.
         .orElseGet(
             () ->
                 getBlobGasFee(
-                    protocolSchedule.getForNextBlockHeader(header, System.currentTimeMillis()),
-                    header));
+                    protocolSchedule.getForNextBlockHeader(header, header.getTimestamp()), header));
   }
 
   private List<Double> getGasUsedRatios(final List<BlockHeader> blockHeaders) {
@@ -461,9 +576,5 @@ public class EthFeeHistory implements JsonRpcMethod {
             .blobGasUsedRatio(blobGasUsedRatio)
             .reward(maybeRewards)
             .build());
-  }
-
-  private List<Wei> generateZeroWeiList(final int size) {
-    return Stream.generate(() -> Wei.ZERO).limit(size).toList();
   }
 }
